--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@monaco-editor/react": "^4.7.0",
     "@tailwindcss/vite": "^4.1.5",
+    "ag-grid-react": "^33.3.0",
     "axios": "^1.9.0",
     "lucide-react": "^0.509.0",
     "react": "^19.1.0",
